--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-     "ant-design-vue": "^3.2.20",
+    "ant-design-vue": "^3.2.20",
     "bootstrap": "^5.3.0",
     "bootstrap-vue": "^2.23.1",
+    "sweetalert2": "^11.7.20",
     "vue": "^3.3.4",
     "vue-router": "^4.1.6"
   },
